<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.gaoshenlai.faceapp.MainMenu">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_layout"
        >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_btn"
        android:text="@string/list"
        android:layout_alignParentBottom="true"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/send_btn"
        android:text="@string/send"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/list_btn"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/off_setting_btn"
        android:text="@string/off_setting"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/send_btn"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load"
        android:id="@+id/load_btn"
        android:layout_above="@id/list_btn"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/property"
        android:id="@+id/property_btn"
        android:layout_toRightOf="@id/load_btn"
        android:layout_above="@id/list_btn"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detect"
        android:id="@+id/detect_btn"
        android:layout_toRightOf="@id/property_btn"
        android:layout_above="@id/list_btn"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_name"
        android:id="@+id/device_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/connection_status"
        android:text="@string/connection_status"
        android:layout_toRightOf="@id/device_name"
        android:paddingLeft="5dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/face_image"
        android:adjustViewBounds="true"
        android:layout_above="@id/load_btn"
        android:layout_below="@id/device_name"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/test_btn1"
            android:text="test_battery"
            android:layout_alignParentRight="true"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/test_btn2"
            android:text="test_file"
            android:layout_alignParentRight="true"
            android:layout_below="@id/test_btn1"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/peer_list_layout"
        android:visibility="gone"
        >
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peer_list">

        </ListView>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back_btn"
            android:text="BACK"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_btn"
            android:text="@string/search"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"/>
    </RelativeLayout>
</FrameLayout>
